--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,9 @@ packages:
   - mobile
 
 catalog:
+  react: "19.1.0"
+  react-dom: "19.1.0"
+  "@types/react": "19.1.17"
+  "@types/react-dom": "19.1.11"
+
+nodeLinker: hoisted
