--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,18 +8,22 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest --watchAll",
     "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
     "expo": "54.0.25",
+    "expo-blur": "15.0.7",
     "expo-constants": "18.0.10",
     "expo-font": "14.0.9",
     "expo-haptics": "15.0.7",
-    "expo-image": "3.0.10",
+    "expo-image": "~3.0.10",
     "expo-linking": "8.0.9",
     "expo-router": "6.0.15",
     "expo-splash-screen": "31.0.11",
@@ -32,21 +36,28 @@
     "react-dom": "catalog:",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "2.28.0",
-    "react-native-reanimated": "4.1.1",
-    "react-native-safe-area-context": "5.6.0",
+    "react-native-reanimated": "4.1.3",
+    "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "4.16.0",
-    "react-native-web": "0.21.0",
+    "react-native-web": "0.21.2",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0",
+    "@babel/core": "^7.25.2",
+    "@tailwindcss/cli": "^4.1.17",
+    "@types/jest": "^29.5.12",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@types/react-test-renderer": "^19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~54.0.13",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "react-test-renderer": "19.1.0",
     "tailwindcss": "^3.4.18",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.3"
   },
   "private": true
 }
