--- a/basily-mobile/package.json
+++ b/basily-mobile/package.json
@@ -20,24 +20,24 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@tanstack/react-query": "^5.90.11",
-    "expo": "54.0.25",
-    "expo-asset": "~12.0.11",
-    "expo-blur": "15.0.7",
-    "expo-constants": "18.0.10",
-    "expo-font": "14.0.9",
-    "expo-haptics": "15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-linking": "8.0.9",
-    "expo-router": "6.0.15",
-    "expo-splash-screen": "31.0.11",
-    "expo-status-bar": "3.0.8",
-    "expo-symbols": "1.0.7",
-    "expo-system-ui": "6.0.8",
-    "expo-web-browser": "15.0.9",
+    "expo": "54.0.30",
+    "expo-asset": "12.0.12",
+    "expo-blur": "15.0.8",
+    "expo-constants": "18.0.12",
+    "expo-font": "14.0.10",
+    "expo-haptics": "15.0.8",
+    "expo-image": "3.0.11",
+    "expo-linking": "8.0.11",
+    "expo-router": "6.0.19",
+    "expo-splash-screen":"31.0.13",
+    "expo-status-bar":"3.0.9",
+    "expo-symbols": "1.0.8",
+    "expo-system-ui":"6.0.9",
+    "expo-web-browser":"15.0.10",
     "nativewind": "^4.2.1",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
-    "react-native": "0.81.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native":"0.81.5",
     "react-native-gesture-handler": "2.28.0",
     "react-native-reanimated": "4.1.3",
     "react-native-safe-area-context": "5.6.2",
@@ -57,7 +57,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^29.2.1",
-    "jest-expo": "~54.0.13",
+    "jest-expo":"54.0.16",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react-test-renderer": "19.1.0",
     "tailwindcss": "^3.4.18",
